--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1902,6 +1902,11 @@
   { Relation~'#1'~unknown:~use~=,~<,~>,~==,~!=,~<=,~>=. }
 \__kernel_msg_new:nnn { kernel } { zero-step }
   { Zero~step~size~for~step~function~#1. }
+\cs_if_exist:NF \tex_expanded:D
+  {
+    \__kernel_msg_new:nnn { kernel } { e-type }
+      { #1 ~ in~e-type~argument }
+  }
 %    \end{macrocode}
 %
 % Messages used by the \enquote{\texttt{show}} functions.
